src/test/ui/associated-types/cache/project-fn-ret-invariant.oneuse.stderr
error[E0623]: lifetime mismatch
  --> $DIR/project-fn-ret-invariant.rs:39:19
   |
LL | fn baz<'a,'b>(x: Type<'a>, y: Type<'b>) -> (Type<'a>, Type<'b>) {
   |                               --------     --------------------
   |                               |
   |                               this parameter and the return type are declared with different lifetimes...
...
LL |    let b = bar(f, y);
   |                   ^ ...but data from `x` is returned here

error: aborting due to previous error

